--- a/invoice project/style.css
+++ b/invoice project/style.css
@@ -263,7 +263,7 @@ body {
     width: 96.9%;
     padding: 10px;
     margin-bottom: 10px;
-    border: 2px solid #a09f9f;
+    border: 1px solid #a09f9f;
     border-radius: 5px;
     font-size: 14px;
     font-weight: 550;
@@ -278,7 +278,7 @@ body {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
-    border: 2px solid #a09f9f;
+    border: 1px solid #a09f9f;
     border-radius: 5px;
     box-sizing: border-box;
     font-size: 14px;
@@ -295,7 +295,7 @@ body {
     height: 40px;
     padding: 10px;
     margin-bottom: 10px;
-    border: 2px solid #a09f9f;
+    border: 1px solid #a09f9f;
     border-radius: 5px; 
     font-size: 14px;
     font-weight: 550;
@@ -351,6 +351,81 @@ body {
 canvas{
     height: 100%;
     width: 100%;
+}
+
+.table-container{
+  margin-bottom: 8px;
+  display: flex;
+}
+.all-headers{
+  width: 25%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2px;
+  gap: 8px;
+}
+
+.headers{
+  width: 96%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  height: auto;
+  min-height: 40px;
+  padding-left: 8px;
+  border-radius: 6px;
+  font-size: 13px;
+  font-weight: 550;
+  background-color: rgb(243, 243, 243);
+  color: #5e5e5e;
+}
+
+.all-tableval {
+  height: auto;
+  width: 75%;
+  max-width: 75%;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  overflow: hidden; /* Hide the scrollbar */
+  padding: 2px;
+}
+
+.all-tableval:hover {
+  overflow-x: auto; /* Show scrollbar on hover */
+}
+
+.all-tableval::-webkit-scrollbar {
+  width: 0; /* Hide the scrollbar */
+  height: 0;
+}
+
+.all-tableval::-webkit-scrollbar-track {
+  background: transparent; /* Set scrollbar track color */
+}
+
+.val-div{
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
+}
+
+.values{
+  min-width:  180px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  height: auto;
+  min-height: 36px;
+  padding-left: 8px;
+  border-radius: 6px;
+  font-size: 13px;
+  font-weight: 550;
+  /* background-color: rgb(243, 243, 243); */
+  color: #181717;
+  border: 1px solid rgb(54, 54, 54);
 }
 
 /* .highlight-canvas{
